<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_EM_Cmd_UpdateTable" Id="{cd279b59-7dad-41d5-b05a-803600e3de62}">
    <Declaration><![CDATA[TYPE ST_EM_Cmd_UpdateTable :
	STRUCT
		ChangeTable : BOOL;
		ChangeMode	: BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>