<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_EM_HMI_UpdateTable" Id="{3a54540c-f751-4683-96d4-6f7278c74bff}">
    <Declaration><![CDATA[TYPE ST_EM_HMI_UpdateTable :
	STRUCT
		Cmd : ST_EM_Cmd_UpdateTable;
		Cfg : ST_EM_Cfg_UpdateTable;
		Sts : ST_EM_Sts_UpdateTable;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>