<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_EM_Sts_UpdateTable" Id="{395d055f-c501-46d1-ace4-4d7fcda31148}">
    <Declaration><![CDATA[TYPE ST_EM_Sts_UpdateTable :
	STRUCT
		CurrentTable : UDINT;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>